--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
   <groupId>org.apache.maven.release</groupId>
   <artifactId>maven-release</artifactId>
-  <version>3.0.0-SNAPSHOT</version>
+  <version>3.0.0-alpha3</version>
   <packaging>pom</packaging>
 
   <name>Maven Release</name>
@@ -101,6 +101,7 @@
           <groupId>org.apache.rat</groupId>
           <artifactId>apache-rat-plugin</artifactId>
           <configuration>
+            <skip>true</skip>
             <excludes combine.children="append">
               <exclude>.repository</exclude>
             </excludes>
